Fixed bug with inconsistent showcase thumbnail and text ordering on small screens.

--- a/src/styles/imports/main/showcase.less
+++ b/src/styles/imports/main/showcase.less
@@ -18,7 +18,7 @@
 }
 
 #showcase .showcase-title h3 {
-    margin: 5px 0 10px;
+    margin: 10px 0;
 }
 
 #showcase .showcase-text p {
